--- a/app.css
+++ b/app.css
@@ -9,10 +9,8 @@ body {
     /* border: 2px solid black; */
 }
 
-.searc_bar{
-display: flex;
-justify-content: space-around;
-margin-bottom: 15px;
+h1{
+    text-shadow: 1px 1px 1px black;
 }
 
 #display_box {
@@ -37,6 +35,26 @@ margin-bottom: 15px;
 div>img {
     width: 100%;
     height: 200px;
+}
+
+.css_class_for_search_bar{
+    padding: 12px;
+    margin-top: 10px;
+    background-color:rgb(215, 242, 246, 0.8);
+    display: flex;
+    justify-content: space-around;
+    margin-bottom: 15px;
+
+}
+
+.css_class_for_serach_button,.css_class_for_sort_button{
+    /* border: 2px solid black; */
+    height: 30px;
+}
+
+.css_class_for_serach_button>input{
+    border: 2px solid rgb(255, 221, 0);
+    border-radius: 4px;
 }
 
 @media only screen and (max-width:1210px) {
@@ -79,4 +97,39 @@ div>img {
             padding: 10px;
             margin: 10px;
         }
+        .css_class_for_search_bar{
+            padding: 12px;
+            margin-top: 10px;
+            background-color:rgb(215, 242, 246, 0.8);
+            display: flex;
+            flex-direction: column;
+            justify-content: space-around;
+            margin-bottom: 15px;
+        
         }
+        .css_class_for_serach_button, .css_class_for_sort_button{
+            /* border: 2px solid black; */
+            height: 30px;
+            width: 100%;
+        }
+
+        .css_class_for_serach_button>input{
+            width: 70%;
+            font-size: 11px;
+            border: 2px solid rgb(255, 221, 0);
+            border-radius: 4px;
+        }
+
+        .css_class_for_serach_button>button{
+            width: 27.5%;
+            font-size: 12px;
+            font-weight: normal;
+        }
+
+        .css_class_for_sort_button>button{
+
+            width: 49%;
+            font-size: 12px;
+            font-weight: normal;
+        }
+    }
